# rtracey

./: .gitignore  CMakeLists.txt  README.md
include/: aabb.cuh  aarect.cuh  as.cuh  attenuation.cuh  bbox.cuh  camera.cuh  cbuffer.cuh  color.hpp  debug.hpp  emit.cuh  external.hpp  group.cuh  groupparam.cuh  hit.cuh  hittable.cuh  hittables.cuh  info.cuh  kernelio.cuh  makeworld.cuh  material.cuh  matparam.cuh  matrix.cuh  mediumc.cuh  mesh.cuh  minmax.cuh  onb.cuh  pdf.cuh  perlin.cuh  prandom.cuh  primitive.cuh  primitivefn.cuh  ray.cuh  record.cuh  scattering.cuh  sceneaarect.cuh  scenegroup.cuh  scenegroupparam.cuh  scenehit.cuh  scenehitparam.cuh  scenelambert.cuh  (+25 more)
src/: main.cu
